--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.17",
+    "axios": "^1.1.2",
     "react": "17.0.2",
     "react-native": "0.67.2"
   },
